Fix publications covers

--- a/web/sites/default/themes/custom/ncwtheme/src/sass/displays/publications.scss
+++ b/web/sites/default/themes/custom/ncwtheme/src/sass/displays/publications.scss
@@ -147,6 +147,10 @@ body.node--type-publication{
     display: flex;
     padding-top: 1rem;
   }
+  .aditional-publications{
+    display: flex;
+    padding-top: 1rem;
+  }
   .publications-row.custom-add-margin{
     padding-bottom: 2rem;
   }
@@ -192,6 +196,7 @@ body.node--type-publication{
       .label{
         font-size: 0.9rem;
         padding-right: 5px;
+        font-weight: 700;
       }
       .field{
         padding: 0;
@@ -206,6 +211,7 @@ body.node--type-publication{
   .datetime{
     display: block;
     font-size: 0.9rem;
+    font-weight: 700;
   }
   .field.field--name-field-tags{
     > ul{
